2008-12-03  Jorn Baayen  <jorn.baayen@collabora.co.uk>

	* libgssdp/gssdp-resource-group.c (message_received_cb):

	"All SSDP services MUST respond to SEARCH requests over the SSDP 
	multicast channel/port with the ST value of ssdp:all by responding 
	as if the ST value had been their service type. "

	Thanks Hugo Calleja. Fixes #1312.

2008-11-21  Jorn Baayen  <jorn.baayen@collabora.co.uk>

	* AUTHORS:

	New e-mail address.

	* libgssdp/gssdp-resource-group.c (gssdp_resource_group_dispose),
	(gssdp_resource_group_class_init),
	(gssdp_resource_group_add_resource), (process_queue),
	(queue_message), (resource_alive), (resource_byebye):

	Do not byebye unavailable resources.
	(And polish message delaying code a little)

2008-11-19  Jussi Kukkonen  <jku@linux.intel.com>

	* libgssdp/gssdp-resource-group.c:

	Make gssdp_resource_group_queue_message() static as well.

2008-11-19  Jussi Kukkonen  <jku@linux.intel.com>

	* libgssdp/gssdp-resource-group.c:

	Send byebyes in dispose without sleep: DLNA message delay is
	only mandatory for alive-messages after all. 
	Make process_queue() static.

2008-11-18  Jorn Baayen  <jorn.baayen@collabora.co.uk>

	* configure.ac:

	Depend on glib 2.18.

	* libgssdp/gssdp-client.c (gssdp_client_set_property):

	Use g_set_error_literal().

2008-11-06  Jussi Kukkonen  <jku@linux.intel.com>

	* doc/gssdp-sections.txt:
	* libgssdp/gssdp-client.c (gssdp_client_new):
	* libgssdp/gssdp-client.h (gssdp_client_new):
	* libgssdp/gssdp-error.c (gssdp_error_quark):
	* libgssdp/gssdp-resource-group.c (gssdp_resource_group_get_client):

	Documentation fixes

2008-11-06  Jussi Kukkonen  <jku@linux.intel.com>

	* libgssdp/gssdp-resource-group.c:

	Only send one SSDP message per X milliseconds (X == 20 by default)

2008-11-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* AUTHORS:
	* tools/gssdp-device-sniffer.c:
	* tools/gssdp-device-sniffer.glade:

	Replace my non-working "@gstreamer.net" email with "@gnome.org" one.
