@@ -20,6 +20,7 @@
  */
 
 #include <libgssdp/gssdp.h>
+#include <stdlib.h>
 
 int
 main (int    argc,
@@ -35,11 +36,12 @@ main (int    argc,
         error = NULL;
         client = gssdp_client_new (NULL, &error);
         if (error) {
-                g_critical (error->message);
+                g_printerr ("Error creating the GSSDP client: %s\n",
+                            error->message);
 
                 g_error_free (error);
 
-                return 1;
+                return EXIT_FAILURE;
         }
 
         resource_group = gssdp_resource_group_new (client);
@@ -59,5 +61,5 @@ main (int    argc,
         g_object_unref (resource_group);
         g_object_unref (client);
 
-        return 0;
+        return EXIT_SUCCESS;
 }
